Preliminary migration to LK 24.3